@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.5-pl (December 8th, 2010)
 ====================================
+- [#2918] Address XSS vuln in manager login that allows JS injection
 - Fix issue where // is stripped from filemanager_url http address
 - [#2902] Fix issue where Administrator policy ACLs in non-Administrator groups couldnt be edited
 - [#2915] Ensure UserGroups restriction is enforced in FC Profiles
